--- a/src/com/mypos/sales/view/SalesPanel.form
+++ b/src/com/mypos/sales/view/SalesPanel.form
@@ -83,13 +83,14 @@
         <Component class="javax.swing.JTable" name="jTable1">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="6" rowCount="6">
+              <Table columnCount="7" rowCount="6">
                 <Column editable="true" title="Id Transaction" type="java.lang.Object"/>
                 <Column editable="true" title="Id Sale" type="java.lang.Object"/>
+                <Column editable="true" title="Receipt Number" type="java.lang.Object"/>
                 <Column editable="true" title="Total Amount" type="java.lang.Object"/>
                 <Column editable="true" title="Amount Paid" type="java.lang.Object"/>
+                <Column editable="true" title="Change Amount" type="java.lang.Object"/>
                 <Column editable="true" title="Sale Datetime" type="java.lang.Object"/>
-                <Column editable="true" title="Create At" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
